docs: record the 2026-09-24 upstream sync
CLAUDE.md: re-measure §1 and §4 against both bases after this sync --
55 behind moonlight-stream master by rev-list, but only 31 not carried in
any form (25 of them translations), classified per commit; 0 behind
Artemis. Upstream released v12.2 on 2026-09-12, so the "releases frozen
at v12.1" framing is corrected. §2's "39 commits behind" described the
old ClassicOldSong pin; the meowerse/moonmeow-common-c meow pin is 3
behind real master (62e0663). Also records the CRLF-vs-LF cherry-pick
trap, corrects the 31b70030 "diverges on 48" claim (only Android.mk
diverges), and updates the Robolectric version and gate test count.

TOUCHPOINTS.md: row for the adapted 5c0c2390 string; the Android 16.1
back-ports are unblocked by compileSdk 37 + Robolectric 4.17, 6d4c64a5 is
in verbatim, and ddb674a9's keyboard-capture half is deferred with reasons.

android_test_setup.md: Robolectric 4.17, compileSdk 37, and the
--add-opens flag SDK 36+ tests need.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>